--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   <br />
                   <a href="https://omololacrea8.github.io/Product-landing-page/">View repo</a>
                 </div>
-                <img src="img/Capture5.png" alt="" />
+                <img src="img/Capture5.PNG" alt="" />
               </div>
               <div class="proj proj2">
                 <div class="projInfo">
@@ -91,10 +91,10 @@
                   <br />
                   <a href="https://omololacrea8.github.io/Signup-Form/">View repo</a>
                 </div>
-                <img src="img/Capture4.png" alt="" />
+                <img src="img/Capture4.PNG" alt="" />
               </div>
               <div class="proj">
-                <img src="img/Capture1.png" alt="" />
+                <img src="img/Capture1.PNG" alt="" />
                 <div class="projInfo">
                   <h2>KEYZ RESTAURANT</h2>
                   <p>
@@ -113,7 +113,7 @@
                   <br />
                   <a href="https://omololacrea8.github.io/Four-card-feature-section/">view repo</a>
                 </div>
-                <img src="img/Capture2.png" alt="" />
+                <img src="img/Capture2.PNG" alt="" />
               </div>
             </div>
             <div class="proj proj2">
@@ -125,7 +125,7 @@
                   <br/>
                   <a href="https://omololacrea8.github.io/A-login-Page/">Cview repo</a>
                 </div>
-                <img src="img/Capture3.png" alt="" />
+                <img src="img/Capture3.PNG" alt="" />
               </div>
             </div>
           
