--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             </div>
             <div class="nav-btn">
               <label for="nav-check">
-                <span></span>
-                <span></span>
-                <span></span>
+                <div></div>
+                <div></div>
+                <div></div>
               </label>
             </div>
             
