--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             </div>
             <div class="nav-btn">
               <label for="nav-check">
-                <div></div>
-                <div></div>
-                <div></div>
+                <span></span>
+                <span></span>
+                <span></span>
               </label>
             </div>
             
@@ -35,7 +35,7 @@
               <div class="col-lg-4">
                 <img src="img/omolola.jpeg" width="100%">
                 <h1>Junior Software Developer</h1>
-                <h5>I am <span id="a12"></span></h5>
+                <h5>I am <div id="a12"></div></h5>
                 <p>I am a versatile programmer with knowledge and interest to learn and code, who specialise in Front end development and Graphics Design.</p>
                 <p style="color:rgb(247, 97, 184);">" I want to write exceptional code, I want to work on creative projects, and I always want to be honing my craft." - Fele Omolola. </p>
             </div>
