--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <a href="#home" target="_blank">Home</a>
               <a href="#about" target="_blank">About</a>
               <a href="#portfolio" target="_blank">Portfolio</a>
-              <a href="https://codepen.io/jo_Geek/" target="_blank">Contact</a>
+              <a href="#contact" target="_blank">Contact</a>
               
             </div>
           </div>
