--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
         </div>
           
         <div class="container-fluid blue-background whitespace">
-          <h2 class="text-center">About Me</h2>
-            <p class="text-center">I am aspiring to be a Full Stack Web developer. </p>
+          <h2>About Me</h2>
+            <p>I am aspiring to be a Full Stack Web developer. </p>
         </div>
         <div class="skills" id="skill">
             <div class="container">
-                <h2 class="text-center">SKILLS</h2>
+                <h2>SKILLS</h2>
                 <hr>
                 <div class="row">
                     <div class="column">
